Tue Oct 14 13:09:35 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/config-sunos5.10.h:

          Undefine ACE_LACKS_WCSTOLL.

        * ace/config-sunos5.5.h:

          Define ACE_LACKS_WCSTOLL.

Tue Oct 14 12:56:42 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/config-win32-msvc.h:

          Define ACE_STRTOLL_EQUIVALENT and ACE_WCSTOLL_EQUIVALENT.

Tue Oct 14 12:49:11 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
        * ace/config-win32-borland.h:

          Define ACE_LACKS_STRTOLL and ACE_LACKS_WCSTOLL.

Tue Oct 14 12:49:13 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * bin/tao_other_tests.lst:

          Disabled IPv6 tests for bug#3444 on non-IPv6 builds. And
          disabled the same test on static builds since it loads
          TAO_Strategies and TAO_PortableGroup dynamically.

Tue Oct 14 12:44:28 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/config-hpux-11.00.h:

          Define ACE_LACKS_STRTOLL and ACE_LACKS_WCSTOLL.

Tue Oct 14 09:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_stdlib.h:

          Un-tabify commit of J.T. Conklin.

Mon Oct 13 17:21:28 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/fuzz.pl:

          Add strtoll and strtoull to $OS_NS_stdlib_symbols regex in
          check_for_lack_ACE_OS fuzz check.  Thanks to Abdullah Sowayan
          <abdullah dot sowayan at lmco dot com> for pointing this out.

        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:

          Add strtoll() wrapper.  Fixes bugzilla issue #3456.

          Add wcstol(), wcstoul(), wcstoll(), and wcstoull() emulations
          for systems with wide characters, but without these functions.
          Fixes bugzilla issue #3457.
