@@ -9,6 +9,7 @@
 #include "ace/OS_NS_string.h"
 #include "ace/OS_NS_sys_time.h"
 #include "ace/OS_NS_sys_socket.h"
+# include "ace/OS_NS_unistd.h"
 
 #if !defined (__ACE_INLINE__)
 # include "ace/Ping_Socket.inl"
@@ -248,7 +249,7 @@ ACE_Ping_Socket::process_incoming_dgram (char * ptr, ssize_t len)
           ACE_TEXT ("(%P|%t) ACE_Ping_Socket::process_incoming_dgram")
           ACE_TEXT (" - ICMP_ECHOREPLY received.\n")));
 
-      if (icmp->icmp_id != (getpid () & 0xFFFF))
+	  if (icmp->icmp_id != (ACE_OS::getpid () & 0xFFFF))
         {
           ACE_ERROR_RETURN
             ((LM_ERROR,
@@ -256,7 +257,7 @@ ACE_Ping_Socket::process_incoming_dgram (char * ptr, ssize_t len)
               ACE_TEXT ("process_incoming_dgram ")
               ACE_TEXT ("- The ICMP header received is a reply to request ")
               ACE_TEXT ("of another process (%d; expected %d).\n"),
-              icmp->icmp_id, getpid()),
+			  icmp->icmp_id, ACE_OS::getpid()),
              -1);
         }
       if (icmplen < 16)
@@ -330,7 +331,7 @@ ACE_Ping_Socket::send_echo_check (ACE_INET_Addr &remote_addr,
   _icmp = (struct icmp *) this->icmp_send_buff_;
   _icmp->icmp_type = ICMP_ECHO;
   _icmp->icmp_code = 0;
-  _icmp->icmp_id = getpid () & 0xFFFF;
+  _icmp->icmp_id = ACE_OS::getpid () & 0xFFFF;
   _icmp->icmp_seq = sequence_number_++;
 
 #if defined (ACE_WIN32)
